<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_details">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/global"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundActivity">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" >

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/neighbourPic"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintDimensionRatio="1.5:1"
                    android:scaleType="centerCrop"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbarDetails"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@android:color/transparent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/neighbourName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:paddingBottom="20dp"
                    android:textSize="36sp"
                    android:textColor="@android:color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </android.support.constraint.ConstraintLayout>

        </android.support.design.widget.AppBarLayout>

        <android.support.v7.widget.CardView
            android:id="@+id/firstcardview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            app:layout_constraintDimensionRatio="2:1"
            app:layout_constraintTop_toBottomOf="@+id/appbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" >

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/neighbourDetailName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/separator"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@color/backgroundActivity"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:paddingEnd="@dimen/activity_horizontal_margin"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/neighbourDetailName" />

                <ImageView
                    android:id="@+id/iconPlace"
                    style="@style/iconDetail"
                    android:layout_marginVertical="10dp"
                    android:src="@drawable/ic_room_pink_24dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/separator" />

                <TextView
                    android:id="@+id/neighbourPlace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Place"
                    android:textAlignment="textStart"
                    android:textColor="@android:color/black"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@id/iconPlace"
                    app:layout_constraintStart_toEndOf="@id/iconPlace"
                    app:layout_constraintTop_toTopOf="@id/iconPlace" />

                <ImageView
                    android:id="@+id/iconPhone"
                    style="@style/iconDetail"
                    android:layout_marginVertical="10dp"
                    android:src="@drawable/ic_phone_pink_24dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/neighbourPlace" />

                <TextView
                    android:id="@+id/neighbourPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Téléphone"
                    android:textAlignment="textStart"
                    android:textColor="@android:color/black"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@id/iconPhone"
                    app:layout_constraintStart_toEndOf="@id/iconPhone"
                    app:layout_constraintTop_toTopOf="@id/iconPhone" />

                <ImageView
                    android:id="@+id/iconFacebook"
                    style="@style/iconDetail"
                    android:layout_marginVertical="10dp"
                    android:src="@drawable/ic_socialnetwork_pink_24dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/neighbourPhone" />

                <TextView
                    android:id="@+id/neighbourFacebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="www.facebook.fr/"
                    android:textAlignment="textStart"
                    android:textColor="@android:color/black"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@id/iconFacebook"
                    app:layout_constraintStart_toEndOf="@id/iconFacebook"
                    app:layout_constraintTop_toTopOf="@id/iconFacebook" />

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/secondcardview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            app:layout_constraintTop_toBottomOf="@id/firstcardview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/global">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/aboutmeCardview"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                android:id="@+id/AboutmeTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="20sp"
                android:text="A propos de moi"
                android:textColor="@android:color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/separator2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/backgroundActivity"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/AboutmeTitle" />

            <TextView
                android:id="@+id/Aboutme"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/text_margin"
                android:layout_marginBottom="@dimen/text_margin"
                android:layout_marginLeft="@dimen/text_margin"
                android:layout_marginRight="@dimen/text_margin"
                android:textSize="12dp"
                android:textColor="@android:color/black"
                android:scrollbars="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/AboutmeTitle"
                app:layout_constraintBottom_toBottomOf="@+id/aboutmeCardview"/>

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

    </android.support.constraint.ConstraintLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/favoritefab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:clickable="true"
        android:src="@drawable/ic_star_border_yellorange_24dp"
        app:backgroundTint="@color/cardview_light_background"
        android:focusable="true" />

</android.support.design.widget.CoordinatorLayout>
